--- a/Coder_house/Tps/desafio_4/pagina.html
+++ b/Coder_house/Tps/desafio_4/pagina.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP_Final</title>
+    <title>Desafio 4</title>
 </head>
 <body>
-    <h1> Proyecto Final </h1>
-    <script  src ="./prefinal.js" ></script> 
+    <h1>arrays con orden  </h1>
+    <script  src ="./desafio_4.js" ></script>
 </body>
 </html>
