sin ver articulos
con fallas

--- a/Coder_house/Tps/finalproyect/finalpage.html
+++ b/Coder_house/Tps/finalproyect/finalpage.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">    
     <title>Final proyect</title>
 </head>
-<body  style="background-color: rgb(60, 34, 175); font-size: 30px; font-family: Arial, Helvetica, sans-serif;">
-    <div id="saludo"></div>
+<body  style="background-color: rgb(26, 8, 107); font-size: 30px; font-family: Arial, Helvetica, sans-serif;">
     <div id="contenedor"></div>
+    <div id="saludo"></div>
     <div id="listadoArticulos">
 
     </div>
@@ -23,11 +23,11 @@
     
     <div style="margin-left:20px; margin-top: 20px;">
     <button id="btnCalcular"style="margin-rigth: 10px; font-size: 20px; cursor: pointer;"  >Calcular Total</button> 
-    <button id="btnBorrar" style="margin-left: 10px; font-size: 20px; cursor: pointer;">Borrar Datos</button> 
+    <button id="btnBorrar" style="margin-left: 10px; font-size: 20px; cursor: pointer;">Limpiar</button> 
     <br>
     </div>
-    <h2>Detalle de su compra</h2>
-    <div id="detalleDeCompra"></div>
+    <h2>Detalle de Pedido</h2>
+    <div id="detallePedido"></div>
     <div></div>
     <footer></footer>
     <script src="./JS/Articulos.js"></script>
